# uti

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.ja.md  README.md  cliff.toml  install.sh  package.json  rustfmt.toml  uninstall.sh
.claude/: context.md  settings.json
.claude/agents/: ci-runner.md  doc-updater.md  implementer.md
.claude/archive/: adr-archive.md
.claude/hooks/: session-config.sh  session-setup.sh
.claude/rules/: context.md  conventions.md  decisions.md
.github/: dependabot.yml
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  release.yml  sync-develop.yml  tag-release.yml
app/: .gitignore  biome.json  dialog.html  index.html  package.json  settings.html  test-setup.ts  tsconfig.node.json  update-dialog.html  vite.config.ts
app/src/: App.test.tsx  App.tsx  config.ts  dialog.tsx  index.css  main.tsx  settings-entry.tsx  update-dialog.tsx
app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cli.rs  clipboard.rs  clipboard_store.rs  lib.rs  main.rs  updater.rs  utils.rs
app/src-tauri/src/clipboard/: commands.rs  mod.rs  store.rs
app/src-tauri/src/config/: commands.rs  defaults.rs  mod.rs
app/src-tauri/src/launcher/: commands.rs  desktop.rs  mod.rs  recent_files.rs  store.rs
app/src-tauri/src/settings/: mod.rs
app/src-tauri/src/snippets/: commands.rs  mod.rs  store.rs
app/src-tauri/src/tray/: handlers.rs  mod.rs
app/src-tauri/src/updater/: core.rs  mod.rs
app/src-tauri/src/window/: commands.rs  mod.rs
daemon/: Cargo.toml  build-rpm.sh  double-ctrl.spec  uti-daemon.spec
daemon/src/: main.rs  uinput.rs
daemon/systemd/: double-ctrl.service  uti-daemon.service
daemon/udev/: 99-uti-uinput.rules
docs/: ARCHITECTURE.md  DEVELOPMENT.md  launcher-config.md  launcher.example.json
docs/assets/: demo-clipboard.json
extension/: extension.js  metadata.json
gnome-extension/: Makefile  biome.json  extension.js  metadata.json
gnome-extension/schemas/: org.gnome.shell.extensions.uti.gschema.xml
scripts/: setup-dev.sh
(+63 files in other folders)
