[package]
name = "uti"
version = "0.1.0"
description = "Double Ctrl hotkey desktop tool"
authors = []
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
