[package]
name = "uti"
version = "0.1.0"
description = "Double Ctrl hotkey desktop tool"
authors = []
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "uti_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "5"
tauri-plugin-autostart = "2.5.1"
open = "5.3.3"

[dev-dependencies]
tempfile = "3"
