[package]
name = "uti"
version = "0.0.11"
description = "Double Ctrl hotkey desktop tool"
authors = []
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "uti_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "5"
tauri-plugin-autostart = "2.5.1"
open = "5.3.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
percent-encoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
